# slam-app-back-end

./: .env  .gitignore  Cargo.toml  Procfile  README.md  slam.db
migrations/2023-04-26-213728_create_rooms/: up.sql
migrations/2023-04-26-213810_create_participants/: down.sql  up.sql
migrations/2023-04-26-213833_create_scores/: up.sql
migrations/2023-04-28-160325_create_rounds/: up.sql
migrations/2023-04-28-160342_create_participations/: down.sql  up.sql
migrations/2023-05-13-142931_update_ids/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
