[package]
name = "slam-app-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4.24"
uuid = { version = "1.3.1", features = ["v4"] }
tower-http = { version = "0.4.0", features = ["full"] }
diesel_migrations = "2.0.0"
